intermediate commit and add burger menu

--- a/src/pages/components/header.html
+++ b/src/pages/components/header.html
@@ -11,5 +11,8 @@
                 <li class="header__item"><a href="./social-network.html" class="header__link">Соц.сети</a></li>
             </ul>
         </nav>
+        <div class="header__burger-wrapper">
+            <div class="header__burger"><span></span><span></span><span></span></div>
+        </div>
     </div>
 </header>
