--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -11,6 +11,7 @@
 .header__wrapper {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .header__nav {
@@ -19,7 +20,12 @@
 
 .header__list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
+}
+
+.header__item {
+    display: inline-block;
 }
 
 .header__item:not(:last-child) {
@@ -30,5 +36,93 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
-    color: #FFFFFF;
+    color: #ffffff;
+    text-transform: uppercase;
+    position: relative;
 }
+
+.header__link:after {
+    content: "";
+    position: absolute;
+    display: block;
+    bottom: -10px;
+    left: 0;
+    right: 0;
+    width: 0%;
+    height: 3px;
+    background-color: #fff;
+    transition: all 1s;
+}
+
+.header__link:hover:after {
+    width: 100%;
+}
+
+.header__burger-wrapper {
+    display: none;
+}
+
+@media (max-width: 1280px) {
+    .header__logo {
+        width: 190px;
+    }
+
+    .header__nav {
+        margin-left: 70px;
+    }
+
+    .header__link {
+        font-size: 18px;
+    }
+
+    .header__item:not(:last-child) {
+        margin-right: 30px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .header {
+        padding-top: 22px;
+        padding-bottom: 22px;
+    }
+
+    .header__logo {
+        width: 150px;
+    }
+
+    .header__nav {
+        margin-left: 30px;
+    }
+
+    .header__link {
+        font-size: 15px;
+    }
+
+    .header__item:not(:last-child) {
+        margin-right: 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }
+
+    .header__nav {
+        display: none;
+    }
+
+    .header__wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header__burger-wrapper {
+        display: block; 
+    }
+}
+
+
+
+@import '../components/burger-animations.css';
