--- a/src/pages/components/footer.html
+++ b/src/pages/components/footer.html
@@ -2,10 +2,12 @@
     <div class="footer__wrapper wrapper">
         <div class="footer__lb">
             <a href="./" class="footer__link-logo">
-                <img class="footer__img" src="./images/logo-footer.svg" alt="dev corp">
+                <img class="footer__img" src="./images/footer-logo.svg" alt="dev corp">
             </a>
-            <h3 class="footer__heading">Development Corporation</h3>
-            <p class="footer__description">Это место, где вы сможете приобрести новых друзей, научиться зарабатывать и просто развиваться. Мы предлагаем вам наши IT продукты, которые помогут вам учиться, общаться и монетезировать в удобной для вас форме.</p>
+            <span>
+                <h3 class="footer__heading">Development Corporation</h3>
+                <p class="footer__description">Это место, где вы сможете приобрести новых друзей, научиться зарабатывать и просто развиваться. Мы предлагаем вам наши IT продукты, которые помогут вам учиться, общаться и монетезировать в удобной для вас форме.</p>
+            </span>
         </div>
         <div class="footer__cb">
             <div class="footer__line"></div>
