--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -47,6 +47,10 @@
     background-repeat: no-repeat;
 }
 
+.footer__nav {
+    margin-right: 280px;
+}
+
 .footer__item:not(:last-child) {
     margin-bottom: 24px;
 }
@@ -56,4 +60,22 @@
     font-size: 20px;
     line-height: 24px;
     color: #FFFFFF;
+}
+
+@media(max-width: 1280px) {
+    .footer__cb, .footer__rb {
+        display: none;
+    }
+
+    .footer__heading {
+        margin-top: 0;
+    }
+
+    .footer__lb {
+        display: flex;
+    }
+
+    .footer__description, .footer__heading {
+        margin-left: 50px;
+    }
 }
