--- a/src/pages/components/pageHome/network.html
+++ b/src/pages/components/pageHome/network.html
@@ -1,9 +1,9 @@
-<section class="project-founders-network wrapper">
-    <h2 class="project-founders-network__heading project-founders-network__heading_network">Социальные сети</h2>
+<section class="wrapper_card wrapper">
+    <h2 class="heading project-founders-network__heading_network">Социальные сети</h2>
     <div class="project-founders-network__block">
-        <img src="./images/projects.png" alt="project-founders-network" class="project-founders-network__images">
+        <img src="./images/social-network.png" alt="project-founders-network" class="project-founders-network__images">
         <div class="project-founders-network__br">
-            <p class="project-founders-network__descriptions">В современном мире во многих инновационных проектах важную роль занимают социальные сети, ведь благодаря им у людей есть возможность объединяться, принимать активное участие в проектах будущего и мы не исключение. Мы ведём работу по многим направлениям, и соц-сети - одно из них. Мы ведём Telegram, instagram, Discord, TikTok.</p>
+            <p class="description">В современном мире во многих инновационных проектах важную роль занимают социальные сети, ведь благодаря им у людей есть возможность объединяться, принимать активное участие в проектах будущего и мы не исключение. Мы ведём работу по многим направлениям, и соц-сети - одно из них. Мы ведём Telegram, instagram, Discord, TikTok.</p>
             <a class="project-founders-network__link" href="./social-network.html">Подробнее</a>
         </div>
     </div>
