--- a/src/pages/components/pageHome/project.html
+++ b/src/pages/components/pageHome/project.html
@@ -1,9 +1,9 @@
-<section class="project-founders-network wrapper">
-    <h2 class="project-founders-network__heading project-founders-network__heading_project">О проекте</h2>
+<section class="wrapper_card wrapper">
+    <h2 class="heading project-founders-network__heading_project">О проекте</h2>
     <div class="project-founders-network__block">
         <img src="./images/projects.png" alt="project-founders-network" class="project-founders-network__images">
         <div class="project-founders-network__br">
-            <p class="project-founders-network__descriptions">Интернациональная команда, в которой находятся люди из США, Польши, России, Беларуси, Украины, Германии, Приднестровья, работает над общей целью- сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном, финансовом плане. И всё это происходит в рамках нашей экосистемы "Development_corporation", под эгидой которой будет выпущено множество продуктов.</p>
+            <p class="description">Интернациональная команда, в которой находятся люди из США, Польши, России, Беларуси, Украины, Германии, Приднестровья, работает над общей целью- сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном, финансовом плане. И всё это происходит в рамках нашей экосистемы "Development_corporation", под эгидой которой будет выпущено множество продуктов.</p>
             <a class="project-founders-network__link" href="./products.html">Подробнее о проекте</a>
         </div>
     </div>
