--- a/src/pages/components/pageHome/projectsCompany.html
+++ b/src/pages/components/pageHome/projectsCompany.html
@@ -1,6 +1,49 @@
-<section class="projects-ompany wrapper">
-    <h2 class="projects-ompany__heading">Продукты компании</h2>
-    <div class="projects-ompany__container">
-        <img src="./images/projects-company.png" alt="" class="projects-ompany__images">
+<section class="projects-company wrapper_card wrapper">
+    <h2 class="heading projects-company__heading">Продукты компании</h2>
+    <div class="projects-company__container">
+        <img src="./images/projects-company.svg" alt="" class="projects-ompany__images">
+        <div class="projects-company__circle projects-company__circle_active">
+            InVoc
+            <span class="projects-company__tooltip">
+                <h6 class="projects-company__tooltip-heading">Telegram Bot InVoc</h6>
+                <p class="projects-company__tooltip-description">«Investor’s Vocabulary» Telegram Bot создан для того, чтобы давать вам знания из сферы криптовалют, финансовой грамотности и фондового рынка. Вы получите возможность иметь портативный словарь, где храниться более 600-а терминов и более 100-а фигур технического анализа для рыночного графика.</p>
+            </span>
+        </div>
+        <div class="projects-company__circle projects-company__circle_inactive">
+            DevAR
+            <span class="projects-company__tooltip">
+                <h6 class="projects-company__tooltip-heading">DevAR</h6>
+                <p class="projects-company__tooltip-description">soon</p>
+            </span>
+        </div>
+        <div class="projects-company__circle projects-company__circle_inactive">
+            DevApp
+            <span class="projects-company__tooltip">
+                <h6 class="projects-company__tooltip-heading">DevApp</h6>
+                <p class="projects-company__tooltip-description">«DevCorp APP» – Новое инновационное приложение в сфере обучения. В приложении можно получить знания в сферах it-сектора, знания по digital-профессиям, знания в сфере инвестирования и etc. Обучение разбито на блоки, а блоки на подблоки, можно обучиться, проходя разные мини-игры и другие "плюшки". В приложении будет хорошо развита экономика, можно будет получить white листы на остальные продукты экосистемы.</p>
+            </span>
+        </div>
+        <div class="projects-company__circle projects-company__circle_inactive">
+            DevLVL
+            <span class="projects-company__tooltip">
+                <h6 class="projects-company__tooltip-heading">DevLVL</h6>
+                <p class="projects-company__tooltip-description">soon</p>
+            </span>
+        </div>
+        <div class="projects-company__circle projects-company__circle_inactive">
+            DevBIs
+            <span class="projects-company__tooltip">
+                <h6 class="projects-company__tooltip-heading">DevBIs</h6>
+                <p class="projects-company__tooltip-description">«DevBLS» – Новая современная интернет-платформа для предпринимателей и бизнесменов. На платформе будет развитая система сообщества, новостные сводки про бизнес и т.п. И самое главное- возможность начать зарабатывать путём связи пользователя с платформой разными путями.</p>
+            </span>
+        </div>
+        <div class="projects-company__circle projects-company__circle_active">
+            DevCom
+            <span class="projects-company__tooltip">
+                <h6 class="projects-company__tooltip-heading">DevCom</h6>
+                <p class="projects-company__tooltip-description">«DevCorp Community» В нашем дискорде вы можете расширить человеческий капитал, получить знание от более опытных людей в выбранной вами сфере, участвовать в онлайн мероприятиях и жизни нашего сообщества. Вы можете выбирать то, как и где вы будете учиться, какой навык вы изучите. Обсуждать актуальные новости из выбранной вами сферы.</p>
+            </span>
+        </div>
+
     </div>
 </section>
