--- a/src/styles/components/global.css
+++ b/src/styles/components/global.css
@@ -65,6 +65,10 @@
         padding-top: 85px;
         padding-bottom: 85px;
     }
+
+    .description {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 768px) {
