--- a/src/styles/components/pageHome/projectsCompany.css
+++ b/src/styles/components/pageHome/projectsCompany.css
@@ -1,11 +1,129 @@
-.projects-ompany__heading {
-    font-weight: 700;
-    font-size: 60px;
-    line-height: 73px;
-    color: #FFFFFF;
+.projects-company__heading::after {
+    content: '';
+    display: block;
+    position: relative;
+    background-image: url('../images/opportunities-line.png');
+    background-repeat: no-repeat;
+    width: 881px;
+    height: 20px;
+    left: -138px;
 }
 
-.projects-ompany__container {
+.projects-company__container {
+    position: relative;
+    width: 1168px;
+    height: 622px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 158px;
+}
+
+.projects-company__images {
+    width: 1168px;
+    height: 622px;
+}
+
+.projects-company__circle_active, .projects-company__circle_inactive {
+    cursor: pointer;
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 151px;
+    height: 151px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects-company__circle_active {
+    background: linear-gradient(130.88deg, rgba(255, 255, 255, 0.7) 0%, rgba(219, 173, 252, 0.14) 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 27px;
+    align-items: center;
+    color: #FFFFFF;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.projects-company__circle_inactive {
+    background: linear-gradient(130.88deg, rgba(255, 255, 255, 0.7) 0%, rgba(219, 173, 252, 0.14) 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 27px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.projects-company__tooltip {
+    position: absolute;
+    top: 108px;
+    width: 377px;
+    background: linear-gradient(130.88deg, rgba(2, 111, 212, 0.7) 0%, rgba(2, 111, 212, 0.14) 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    border-radius: 20px 20px 20px 20px;
+    padding: 24px 28px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.projects-company__circle:hover .projects-company__tooltip {
+    opacity: 1;
+}
+
+.projects-company__circle:nth-child(2n) .projects-company__tooltip {
+    left: 76px;
+    border-top-left-radius: 0;
+}
+
+.projects-company__circle:nth-child(2n+1) .projects-company__tooltip {
+    right: 76px;
+    border-top-right-radius: 0;
+}
+
+.projects-company__tooltip-heading {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 39px;
+    color: #FFFFFF;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.projects-company__tooltip-description {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 32px;
+    color: #FFFFFF;
+    margin-top: 15px;
+}
+
+.projects-company__circle:nth-child(2) {
+    top: 14px;
+    left: 197px;
+}
+
+
+.projects-company__circle:nth-child(3) {
+    top: 14px;
+    left: 850px;
+}
+.projects-company__circle:nth-child(4) {
+    top: 250px;
+    left: 15px;
+}
+.projects-company__circle:nth-child(5) {
+    top: 250px;
+    left: 1032px;
+}
+.projects-company__circle:nth-child(6) {
+    top: 485px;
+    left: 197px;
+}
+
+.projects-company__circle:nth-child(7) {
+    top: 485px;
+    left: 850px;
 }
