--- a/src/pages/components/head.html
+++ b/src/pages/components/head.html
@@ -6,4 +6,5 @@
     <link rel="icon" href="./images/icon.svg">
     <link rel="stylesheet" href="./styles/main.min.css" />
     <link rel="stylesheet" href="./styles/normalize.css" />
+    <script defer src="./scripts/main.js"></script>
 </head>
