--- a/src/pages/components/commonСomponents/header.html
+++ b/src/pages/components/commonСomponents/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header__wrapper wrapper">
-        <a href="/" class="header__link-logo">
+        <a href="./" class="header__link-logo">
             <img src="./images/logo.svg" alt="dev corp" class="header__logo" />
         </a>
         <nav class="header__nav">
