--- a/src/styles/components/commonСomponents/header.css
+++ b/src/styles/components/commonСomponents/header.css
@@ -36,7 +36,7 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
-    color: #ffffff;
+    color: var(--text-color);
     text-transform: uppercase;
     position: relative;
 }
@@ -50,11 +50,11 @@
     right: 0;
     width: 0%;
     height: 3px;
-    background-color: #fff;
+    background-color: var(--text-color);
     transition: all 1s;
 }
 
-.header__link:hover:after {
+.header__link:hover:after, .header__link:focus:after {
     width: 100%;
 }
 
@@ -125,4 +125,4 @@
 
 
 
-@import '../components/burger-animations.css';
+@import './burger-animations.css';
