--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,6 +42,10 @@ html {
     padding: 0;
 }
 
+*:focus {
+    outline: none;
+}
+
 body {
     font-family: "Inter", sans-serif;
     font-weight: 400;
