--- a/src/pages/components/commonСomponents/footer.html
+++ b/src/pages/components/commonСomponents/footer.html
@@ -1,18 +1,16 @@
 <footer class="footer">
     <div class="footer__wrapper wrapper">
-        <div class="footer__lb">
+        <div class="footer__left">
             <a href="./" class="footer__link-logo">
-                <img class="footer__img" src="./images/footer-logo.svg" alt="dev corp">
+                <img class="footer__img" src="./images/footer-logo.svg" alt="dev corp logo">
             </a>
-            <span>
-                <h3 class="footer__heading">Development Corporation</h3>
-                <p class="footer__description">Это место, где вы сможете приобрести новых друзей, научиться зарабатывать и просто развиваться. Мы предлагаем вам наши IT продукты, которые помогут вам учиться, общаться и монетезировать в удобной для вас форме.</p>
-            </span>
+            <h3 class="footer__heading">Development Corporation</h3>
+            <p class="footer__description">Это место, где вы сможете приобрести новых друзей, научиться зарабатывать и просто развиваться. Мы предлагаем вам наши IT продукты, которые помогут вам учиться, общаться и монетезировать в удобной для вас форме.</p>
         </div>
-        <div class="footer__cb">
+        <div class="footer__center">
             <div class="footer__line"></div>
         </div>
-        <div class="footer__rb">
+        <div class="footer__right">
             <nav class="footer__nav">
                 <ul class="footer__list">
                     <li class="footer__item"><a href="./about-project.html" class="footer__link">О проекте</a></li>
