--- a/src/styles/components/commonСomponents/footer.css
+++ b/src/styles/components/commonСomponents/footer.css
@@ -12,18 +12,18 @@
 
 .footer__img {
     width: 160px;
-    min-height: 47px;
+    min-height: 52px;
 }
 
-.footer__lb {
-    width: 793px;
+.footer__left {
+    max-width: 793px;
 }
 
 .footer__heading {
     font-weight: 700;
     font-size: 20px;
     line-height: 15px;
-    color: #FFFFFF;
+    color: var(--text-color);
     margin-top: 40px;
 }
 
@@ -31,11 +31,11 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #FFFFFF;
+    color: var(--text-color);
     margin-top: 20px; 
 }
 
-.footer__cb {
+.footer__center {
     margin-left: 102px;
     margin-right: 102px;
 }
@@ -47,10 +47,6 @@
     background-repeat: no-repeat;
 }
 
-.footer__nav {
-    margin-right: 280px;
-}
-
 .footer__item:not(:last-child) {
     margin-bottom: 24px;
 }
@@ -59,23 +55,23 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
-    color: #FFFFFF;
+    color: var(--text-color);
+    position: relative;
 }
 
-@media(max-width: 1280px) {
-    .footer__cb, .footer__rb {
-        display: none;
-    }
+.footer__link:after {
+    content: "";
+    position: absolute;
+    display: block;
+    bottom: -10px;
+    left: 0;
+    right: 0;
+    width: 0%;
+    height: 2px;
+    background-color: var(--text-color);
+    transition: all 1s;
+}
 
-    .footer__heading {
-        margin-top: 0;
-    }
-
-    .footer__lb {
-        display: flex;
-    }
-
-    .footer__description, .footer__heading {
-        margin-left: 50px;
-    }
+.footer__link:hover:after, .footer__link:focus:after {
+    width: 100%;
 }
