modified opportunities in pageHome

--- a/src/styles/components/commonСomponents/global.css
+++ b/src/styles/components/commonСomponents/global.css
@@ -7,6 +7,7 @@
     --heading-size: 60px;
     --description-size: 20px;
     --text-color: #ffffff;
+    --line-image: url("../images/opportunities-line.png");
 }
 
 /* Глобальные стили */
