--- a/src/pages/components/pageHome/opportunities.html
+++ b/src/pages/components/pageHome/opportunities.html
@@ -1,22 +1,22 @@
-<section class="opportunities wrapper wrapper_card">
-    <h2 class="heading opportunities__heading">Возможности</h2>
+<section class="opportunities wrapper">
+    <h2 class="opportunities__heading heading">Возможности</h2>
     <ul class="opportunities__list">
         <li class="opportunities__item">
-            <img src="./images/opportunities1.png" alt="" class="opportunities__img">
+            <img src="./images/opportunities1.png" alt="Учись" class="opportunities__images">
             <span>
                 <h4 class="opportunities__heading-item">Учись</h4>
                 <p class="opportunities__descriptions">Изучай выбранную область</p>
             </span>
         </li>
         <li class="opportunities__item">
-            <img src="./images/opportunities2.png" alt="" class="opportunities__img">
+            <img src="./images/opportunities2.png" alt="Общайся" class="opportunities__images">
             <span>
                 <h4 class="opportunities__heading-item">Общайся</h4>
                 <p class="opportunities__descriptions">Расширяй человеческий капитал</p>
             </span>
         </li>
         <li class="opportunities__item">
-            <img src="./images/opportunities3.png" alt="" class="opportunities__img">
+            <img src="./images/opportunities3.png" alt="Монетизируй" class="opportunities__images">
             <span>
                 <h4 class="opportunities__heading-item">Монетизируй</h4>
                 <p class="opportunities__descriptions">Получай доход от знаний и ресурсов</p>
