--- a/src/pages/components/pageHome/opportunities.html
+++ b/src/pages/components/pageHome/opportunities.html
@@ -1,5 +1,5 @@
 <section class="opportunities wrapper">
-    <h2 class="opportunities__heading heading">Возможности</h2>
+    <h2 class="heading opportunities__heading">Возможности</h2>
     <ul class="opportunities__list">
         <li class="opportunities__item">
             <img src="./images/opportunities1.png" alt="Учись" class="opportunities__images">
