--- a/src/pages/components/pageHome/founders.html
+++ b/src/pages/components/pageHome/founders.html
@@ -1,7 +1,7 @@
 <section class="wrapper_card wrapper">
     <h2 class="heading project-founders-network__heading_founders">Основатели</h2>
     <div class="project-founders-network__block project-founders-network__block_reverse">
-        <img src="./images/projects.png" alt="project-founders-network" class="project-founders-network__images">
+        <img src="./images/founders.png" alt="project-founders-network" class="project-founders-network__images">
         <div class="project-founders-network__br">
             <p class="description">Этот блок сайта отведён под основателей и партнёров проекта, ведь всем известно, что лицом и флагманом проекта являются создатели. Именно они высаживают маленькое плодоносное деревце и делают всё, чтобы оно выросло и стало самостоятельным, требовало минимальный уход и приносило плоды. Давайте знакомиться.</p>
             <a class="project-founders-network__link" href="./founders.html">Подробнее</a>
