added components for about project

--- a/src/styles/components/commonСomponents/global.css
+++ b/src/styles/components/commonСomponents/global.css
@@ -8,6 +8,7 @@
     --description-size: 20px;
     --text-color: #ffffff;
     --line-image: url("../images/opportunities-line.png");
+    --line-center: url('../images/line-center.png')
 }
 
 /* Глобальные стили */
