--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,4 +80,5 @@ ul {
 @import "components/pageHome/opportunities.css";
 @import "components/pageHome/projectsCompany.css";
 @import "components/pageHome/aboutBlock.css";
+@import "components/pageAboutProducts/purposseAndMission.css";
 @import "components/commonСomponents/footer.css";
