aboutBlock in commonComponents

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -79,6 +79,6 @@ ul {
 @import "components/pageHome/heading.css";
 @import "components/pageHome/opportunities.css";
 @import "components/pageHome/projectsCompany.css";
-@import "components/pageHome/aboutBlock.css";
+@import "components/commonСomponents/aboutBlock.css";
 @import "components/pageAboutProducts/purposseAndMission.css";
 @import "components/commonСomponents/footer.css";
