--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -81,4 +81,5 @@ ul {
 @import "components/pageHome/projectsCompany.css";
 @import "components/commonСomponents/aboutBlock.css";
 @import "components/pageAboutProducts/purposseAndMission.css";
+@import "components/pageFounders/swiperFounders.css";
 @import "components/commonСomponents/footer.css";
