--- a/src/pages/components/commonСomponents/head.html
+++ b/src/pages/components/commonСomponents/head.html
@@ -2,8 +2,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="description" content="Free Web tutorials for HTML and CSS">
+    <meta name="author" content="SilantievMax">
+    <meta name="theme-color" content="#026FD4">
     <title>@@title</title>
     <link rel="icon" href="./images/icon.svg">
     <link rel="stylesheet" href="./styles/main.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="./scripts/main.js"></script>
 </head>
